--- a/.github/workflows/push_to_dev.yaml
+++ b/.github/workflows/push_to_dev.yaml
@@ -29,5 +29,6 @@ jobs:
     - run: |
         touch .env
         echo "${{secrets.PROD_ENV_FILE}}" > .env
+    - run: sudo cp -r template/styles /var/www/static
     - run: pm2 restart manwhadev
 
